# jupyter-collaboration

./: .eslintignore  .eslintrc.js  .flake8  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .readthedocs.yml  .stylelintrc  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  DESIGN.md  README.md  RELEASE.md  SPEC.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  eslint.config.mjs  index.ts  install.json  jupyter-rtc.graffle  lerna.json  main.py  package.json  pyproject.toml  setup.py  spec.json  test_ipynb.ipynb  tsconfig.base.json  tsconfig.json  typedoc.json  untitled.py  untitled.txt
.cursor/: Documentation
.github/workflows/: check-release.yml  license-header.yml  lumino.yml  nodejs.yml  test.yml  update_galata_references.yaml
automerge/: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  environment.yml  jupyter_server_config.json  jupyter_server_config.py  package.json  run_glootalk.py  setup.py  test_jupyter_rtc_automerge.py  tsconfig.base.json
automerge/binder/: environment.yml  postBuild
automerge/docker/: Dockerfile  start-jupyterlab-rtc.sh  start-jupyterlab.sh
automerge/examples/: example.csv  example.json  example.md
automerge/jupyter_rtc/: __init__.py  _version.py  app.py  handlers.py
automerge/rust/: .gitignore  Cargo.toml  Makefile  README.md  environment.yaml  rtc.yaml  setup.py
automerge/rust/glootalk/: __init__.py
automerge/rust/jupyter_rtc_automerge/: __init__.py  nbmodel.py  test_automerge.py
automerge/rust/jupyter_rtc_automerge/tests/: test_jupyter_rtc_automerge.py
automerge/rust/src/: Cargo.toml  ambackend.rs  amserver.rs  amtextarea.rs  automerge_map.rs  environment.yaml  hashmap.rs  hashmap2.rs  lib.rs  load.rs  nbformatbackend.rs  textarea.rs  wsserver.rs
automerge/rust/src/glootalk/: __init__.py  nbmodel.py
automerge/rust/tests/: test_automerge_map.py  test_backend.py  test_hashmap.py  test_hashmap2.py  test_nbformatbackend.py  test_py_rust.py  test_python_objects.py
binder/: environment.yml  jupyter_config.py  postBuild
common/: README.md
docs/: Makefile  README.md  RTC_diagrams.drawio  doc-requirements.txt  environment.yml  make.bat  setup.py
docs/source/: conf.py  configuration.md  index.md  index.rst  javascript_api.rst  overview.md
examples/jupyter/: package.json  tsconfig.json
examples/lumino/: README.md
examples/lumino-datastore/: package.json
examples/rtc-jupyter-example/: package.json  tsconfig.json
examples/rtc-todo-example/: package.json  tsconfig.json
examples/todo/: README.md  package.json  tsconfig.json
funding/: CZI-2020-proposal.md
jupyter-config/: jupyter_notebook.json  jupyter_server.json  jupyterlab_collaboration.json
jupyter_collaboration/: __init__.py  _version.py  app.py  chat_ydoc.py  handlers.py  loaders.py  rooms.py  stores.py  utils.py  websocketserver.py  ychat.py
jupyter_collaboration/events/: awareness.yaml  session.yaml
jupyter_collaboration/rooms/: __init__.py  base.py  document.py  manager.py  transient.py  yroom.py
jupyter_collaboration/stores/: __init__.py  base_store.py  file_store.py  sqlite_store.py  stores.py  utils.py
jupyter_rtc/: __init__.py
jupyter_server_ydoc/: __init__.py  app.py  handlers.py  ydoc.py
jupyterlab_collaboration/: __init__.py  app.py
jupyterlab_rtc/: __init__.py  _version.py  app.py  handlers.py
lumino/: README.md  mypy.ini  package.json  setup.py
projects/jupyter-collaboration/: README.md  pyproject.toml
projects/jupyter-collaboration-ui/: README.md  install.json  pyproject.toml
projects/jupyter-collaboration-ui/jupyter_collaboration_ui/: _version.py
projects/jupyter-collaboration-ui/jupyter_collaboration_ui/labextension/: package.json
projects/jupyter-collaboration-ui/jupyter_collaboration_ui/labextension/static/: 165.689c1983d249d3e82dd7.js  240.1c4ab099f476f77a1f8e.js  325.6585710e7a134c626e5c.js  393.d374154d9bf811a493d6.js  444.d6f3cc1c6d4b374efa63.js  784.8b428f30e05c8f4cee4c.js  842.2fdac7637cb6ce8a5025.js  852.79a5e63af76367a9a10d.js  944.27191c0195c19b79d6b0.js  remoteEntry.4875be4fca8b9529b207.js  style.js
projects/jupyter-collaboration/jupyter_collaboration/: __init__.py  _version.py
projects/jupyter-docprovider/: README.md  install.json  pyproject.toml
projects/jupyter-docprovider/jupyter_docprovider/: __init__.py  _version.py
projects/jupyter-docprovider/jupyter_docprovider/labextension/: package.json
projects/jupyter-docprovider/jupyter_docprovider/labextension/static/: 165.26019899bb44926d285a.js  240.bc1013ab386bf4bef581.js  325.2f9732bab48fc6cacef8.js  36.8d3e48175a6776f676ed.js  421.75a66d511f955fcd7a8b.js  444.a505d1617ac8446e479a.js  703.b6161e1cd24be7df1b1e.js  944.f7880e7a2b9359ace785.js  remoteEntry.9e137a1b8d123cd0bf9a.js  style.js  third-party-licenses.json
projects/jupyter-server-signaling/: README.md  pyproject.toml
projects/jupyter-server-signaling/jupyter-config/: jupyter_server_signaling.json
projects/jupyter-server-signaling/jupyter_server_signaling/: __init__.py  app.py  handlers.py
projects/jupyter-server-ydoc/: README.md  pyproject.toml
projects/jupyter-server-ydoc/jupyter_server_ydoc/: __init__.py  _version.py  app.py  handlers.py  loaders.py  pytest_plugin.py  rooms.py  stores.py  test_utils.py  utils.py  websocketserver.py
projects/jupyter-server-ydoc/jupyter_server_ydoc/events/: awareness.yaml  fork.yaml  session.yaml
scratch/: jupyter-rtc.graffle  package.json
scripts/: bump_version.py  dev_install.py
src/: rtc_relay.pyproject.toml
src/rtc_relay/: __init__.py  __main__.py  handler.py
tests/: __init__.py  conftest.py  test_app.py  test_documents.py  test_general.py  test_handlers.py  test_loaders.py  test_random.py  test_rooms.py  test_session_store.py  test_ydoc.py  utils.py
tools/debugger/: package.json  tsconfig.json
tools/dummy-store/: package.json  tsconfig.json
tools/rtc-debugger/: package.json  tsconfig.json
ui-tests/: README.md  jupyter_server_test_config.py  jupyter_server_test_config_timeline.py  package.json  playwright.config.js  playwright.timeline.config.js
y-js/: README.md
(+61 files in other folders)
