[package]
name = "jupyter_rtc_automerge"
version = "0.0.1"
edition = "2018"

[dependencies]
tungstenite = "0.11.1"
tokio-tungstenite = "*"
tokio = "0.3.6"
automerge-backend = { git = "https://github.com/datalayer-contrib/automerge-rs", branch = "jupyter-rtc" }
automerge-frontend = { git = "https://github.com/datalayer-contrib/automerge-rs", branch = "jupyter-rtc" }
automerge-protocol = { git = "https://github.com/datalayer-contrib/automerge-rs", branch = "jupyter-rtc" }

log = "0.4.11"
simplelog = "*"

[lib]
name = "jupyter_rtc_automerge"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]
