[package]
name = "jupyter_rtc_automerge"
version = "0.0.1"
edition = "2018"



[dependencies]
automerge-backend = { git = "https://github.com/pierrotsmnrd/automerge-rs/", tag = "jupyter_rtc_0.0.1" }
automerge-frontend = { git = "https://github.com/pierrotsmnrd/automerge-rs/", tag = "jupyter_rtc_0.0.1" }
automerge-protocol = { git = "https://github.com/pierrotsmnrd/automerge-rs/", tag = "jupyter_rtc_0.0.1" }

log = "0.4.11"
simplelog = "*"

[lib]
name = "jupyter_rtc_automerge"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]
